--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,11 +124,13 @@ h3 {
   background: var(--black-bg-color);
   color: var(--black-color);
 }
-.white-win.frustrated {
-  background: repeating-linear-gradient(45deg, var(--draw-bg-color), var(--draw-bg-color) 8px, var(--white-bg-color) 8px, var(--white-bg-color) 20px);
+.white-win.frustrated, #cursed.white-turn .badge, #blessed.black-turn .badge {
+  background: repeating-linear-gradient(45deg, var(--white-bg-color), var(--white-bg-color) 8px, var(--draw-bg-color) 8px, var(--draw-bg-color) 20px);
+  text-shadow: white 1px 1px 2px, white -1px -1px 2px;
 }
-.black-win.frustrated {
-  background: repeating-linear-gradient(45deg, var(--draw-bg-color), var(--draw-bg-color) 8px, var(--black-bg-color) 8px, var(--black-bg-color) 20px);
+.black-win.frustrated, #cursed.black-turn .badge, #blessed.white-turn .badge {
+  background: repeating-linear-gradient(45deg, var(--black-bg-color), var(--black-bg-color) 8px, var(--draw-bg-color) 8px, var(--draw-bg-color) 20px);
+  text-shadow: black 1px 1px 2px, white -1px -1px 2px;
 }
 
 a {
@@ -196,12 +198,10 @@ section {
   border: 1px solid var(--white-color);
 }
 #cursed.white-turn .badge, #blessed.black-turn .badge {
-  background: repeating-linear-gradient(45deg, var(--draw-bg-color), var(--draw-bg-color) 8px, var(--white-bg-color) 8px, var(--white-bg-color) 20px);
   color: var(--white-color);
   border: 1px solid var(--white-color);
 }
 #cursed.black-turn .badge, #blessed.white-turn .badge {
-  background: repeating-linear-gradient(45deg, var(--draw-bg-color), var(--draw-bg-color) 8px, var(--black-bg-color) 8px, var(--black-bg-color) 20px);
   color: var(--black-color);
   border: 1px solid var(--black-color);
 }
