--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -135,9 +135,8 @@
       both with and without the fifty-move drawing rule,
       i.e., they allow winning all won
       positions and bringing all drawn positions over the fifty-move line.<p>
-    <p>The tables provide <abbr title="win-draw-loss">WDL</abbr> and
-      <abbr title="distance-to-zeroing (of the fifty-move counter by a capture or pawn move)">DTZ</abbr>
-      information. Forcing captures or pawn moves while keeping a win in hand
+    <p>The tables provide <a href="/metrics">WDL<sub>50</sub> and DTZ<sub>50</sub>&prime;&prime; information</a>.
+      Forcing captures or pawn moves while keeping a win in hand
       ensures that progress is being made.</p>
     <p>DTZ optimal play is not always the shortest way to mate
       (<abbr title="depth-to-mate">DTM</abbr>) and can even look unintuitive:
