--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -5,7 +5,7 @@
 {% block leftside %}
   <h1>Metrics</h1>
 
-  <p>Explanation of the information stored in Syzygy tablebases</p>
+  <p>Information stored in Syzygy tablebases</p>
 
   <nav>
     <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
@@ -35,15 +35,19 @@
       can be used to reliably make progress in favorable positions and stall
       in unfavorable positions.</p>
 
+    <p>The precise meanings are as follows:</a>
+
     <p>A DTZ value n with 100 &ge; n &ge; 1 means the position is winning, and a zeroing
       move or checkmate can be forced in n or n + 1 half-moves.</p>
 
-    <p>For example, see how the DTZ repeats after the only-move in
+    <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=1kb5/8/1KN5/3N4/8/8/8/8&check=b8"></a>
+
+    <p>For an example of this ambiguity, see how the DTZ repeats after the only-move Ka8 in
       <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1">1kb5/8/1KN5/3N4/8/8/8/8 b - -</a>.
-      This ambiguity is due to the fact that some Syzygy tables store rounded moves
-      instead of half-moves, to save space. This means some primary tablebase lines
-      may waste up to 1 ply. Rounding is never used for endgame phases where this would
-      change the game theoretical outcome.</p>
+      This is due to the fact that some Syzygy tables store rounded moves
+      instead of half-moves, to save space. This implies some primary tablebase lines
+      may waste up to 1 ply. Rounding is never used for endgame phases where it would
+      change the game theoretical outcome (WDL<sub>50</sub>).</p>
 
     <p>Users need to be careful in positions
       that are nearly drawn under
@@ -56,9 +60,11 @@
       A zeroing move or checkmate can be forced in n half-moves, or in n - 100 half-moves
       if a later phase is responsible for the win.</p>
 
+    <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.png?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
+
     <p>
       For example, in <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1">8/8/2N5/8/3k4/7N/p2K4/8 b - -</a>
-      black plays a zeroing move in 7 ply, but the DTZ is 107,
+      black promotes the pawn in 7 ply, but the DTZ is 107,
       indicating that white can hold a draw under the 50-move rule in a later phase of the endgame.</p>
   </section>
 {% endblock %}
