minor contrast tweaks

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     {% if development %}
-      <div style="background: red; color: white; text-align: center; font-weight: bold; position: fixed; z-index: 1; width: 100%; top: 0;">Careful, this is an unreliable development version.</div>
+      <div style="background: #c00; color: #fff; text-align: center; font-weight: bold; position: fixed; z-index: 1; width: 100%; top: 0;">Careful, this is an unreliable development version.</div>
     {% endif %}
 
     <div class="left-side">
