sprinkle some <var>

--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -37,8 +37,8 @@
 
     <p>The precise meanings are as follows:</a>
 
-    <p>A DTZ value n with 100 &ge; n &ge; 1 means the position is winning, and a zeroing
-      move or checkmate can be forced in n or n + 1 half-moves.</p>
+    <p>A DTZ value <var>n</var> with 100 &ge; <var>n</var> &ge; 1 means the position is winning, and a zeroing
+      move or checkmate can be forced in <var>n</var> or <var>n</var> + 1 half-moves.</p>
 
     <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=1kb5/8/1KN5/3N4/8/8/8/8&check=b8"></a>
 
@@ -56,8 +56,8 @@
       may change the outcome of the game.
     </p>
 
-    <p>A DTZ value n &gt 100 means the position is winning, but drawn under the 50-move rule.
-      A zeroing move or checkmate can be forced in n half-moves, or in n - 100 half-moves
+    <p>A DTZ value <var>n</var> &gt 100 means the position is winning, but drawn under the 50-move rule.
+      A zeroing move or checkmate can be forced in <var>n</var> half-moves, or in <var>n</var> - 100 half-moves
       if a later phase is responsible for the win.</p>
 
     <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.png?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
