--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -60,7 +60,7 @@
       A zeroing move or checkmate can be forced in <var>n</var> half-moves, or in <var>n</var> - 100 half-moves
       if a later phase is responsible for the win.</p>
 
-    <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.png?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
+    <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
 
     <p>
       For example, in <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1">8/8/2N5/8/3k4/7N/p2K4/8 b - -</a>
