list ipfs mirror

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -187,6 +187,7 @@
       <li><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a> (fastest mirror, EU)</li>
       <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (mirror, EU)</li>
       <li><a href="ftp://ftp.chessdb.cn/pub/syzygy">ftp.chessdb.cn</a> (ftp, China, original source of 7-piece tables)</li>
+      <li><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a> (ipfs, Cloudflare)</li>
     </ul>
   </section>
 
