show dependencies also on mirrored endgames

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -128,7 +128,7 @@
   <section id="dependencies">
     <h3>{{ material }} dependencies</h3>
     <p>
-      To probe all {{ material }} positions, these tables and their transitive
+      To probe all {{ normalized_material }} positions, these tables and their transitive
       dependencies are also required:
     </p>
     <p>
