link downloads for individual endgames

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -140,6 +140,13 @@
         {% endif %}
      {% endfor %}
     </p>
+    <p>
+      <a href="/download/{{ normalized_material }}.txt?dtz=root">
+        <span class="icon icon-download" aria-hidden="true"></span>
+        {{ normalized_material }}.txt
+      </a>
+      (download list)
+    </p>
   </section>
   {% endif %}
 </section>
