update mirror list

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -207,13 +207,43 @@
       </tbody>
     </table>
 
-    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires considerable computational resources. It is more efficient to download them <a href="http://oics.olympuschess.com/tracker/index.php">via BitTorrent</a> or from a mirror:</p>
-    <ul>
-      <li><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a> (fastest mirror, EU)</li>
-      <li><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a> (mirror, EU)</li>
-      <li><a href="ftp://ftp.chessdb.cn/pub/syzygy">ftp.chessdb.cn</a> (ftp, China, original source of 7-piece tables)</li>
-      <li><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a> (ipfs, Cloudflare)</li>
-    </ul>
+    <p><a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires considerable computational resources. It is more efficient to download them from a mirror:</p>
+    <table>
+      <thead>
+        <tr>
+          <th>Host</th>
+          <th>Info</th>
+          <th>#</th>
+          <th>List</th>
+         </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a></td>
+        <td>http, EU</td>
+        <td>7</td>
+        <td><a href="/download.txt?source=sesse"><span class="icon icon-download"></span></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a></td>
+        <td>http, https, EU</td>
+        <td>7</td>
+        <td><a href="/download.txt?source=lichess"><span class="icon icon-download"></span></a></td>
+      </tr>
+      <tr>
+        <td><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a></td>
+        <td>ipfs, Cloudflare</td>
+        <td>7</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td><a href="http://oics.olympuschess.com/">oics.olympuschess.com</a></td>
+        <td>BitTorrent</td>
+        <td>6</td>
+        <td></td>
+      </tr>
+      </tbody>
+    </table>
   </section>
 
   <section id="contact">
