filter download list by piece count

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -222,13 +222,13 @@
         <td><a href="http://tablebase.sesse.net/">tablebase.sesse.net</a></td>
         <td>http, EU</td>
         <td>7</td>
-        <td><a href="/download.txt?source=sesse"><span class="icon icon-download"></span></a></td>
+        <td><a href="/download.txt?source=sesse&max-pieces=7"><span class="icon icon-download"></span></a></td>
       </tr>
       <tr>
         <td><a href="https://tablebase.lichess.ovh/tables/">tablebase.lichess.ovh</a></td>
         <td>http, https, EU</td>
         <td>7</td>
-        <td><a href="/download.txt?source=lichess"><span class="icon icon-download"></span></a></td>
+        <td><a href="/download.txt?source=lichess&max-pieces=7"><span class="icon icon-download"></span></a></td>
       </tr>
       <tr>
         <td><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a></td>
