sort download list

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -141,7 +141,7 @@
      {% endfor %}
     </p>
     <p>
-      <a href="/download/{{ normalized_material }}.txt?dtz=root">
+      <a href="/download/{{ normalized_material }}.txt?source=lichess&dtz=root">
         <span class="icon icon-download" aria-hidden="true"></span>
         {{ normalized_material }}.txt
       </a>
