start providing checksums

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -244,6 +244,14 @@
       </tr>
       </tbody>
     </table>
+
+    The table files have internal non-cryptographic checksums that can be
+    verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
+    <a href="/checksums/syzygy-bytes.tsv">Files sizes</a>,
+    <a href="/checksums/syzygy.md5">MD5</a>,
+    <a href="/checksums/syzygy.sha1">SHA1</a>,
+    <a href="/checksums/syzygy.sha256">SHA256</a> and
+    <a href="/checksums/syzygy.sha512">SHA512</a> sums are also known.
   </section>
 
   <section id="contact">
