rename checksum files

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -247,11 +247,11 @@
 
     The table files have internal non-cryptographic checksums that can be
     verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
-    <a href="/checksums/syzygy-bytes.tsv">Files sizes</a>,
-    <a href="/checksums/syzygy.md5">MD5</a>,
-    <a href="/checksums/syzygy.sha1">SHA1</a>,
-    <a href="/checksums/syzygy.sha256">SHA256</a> and
-    <a href="/checksums/syzygy.sha512">SHA512</a> sums are also known.
+    <a href="/checksums/bytes.tsv">Files sizes</a>,
+    <a href="/checksums/MD5SUM">MD5</a>,
+    <a href="/checksums/SHA1SUM">SHA1</a>,
+    <a href="/checksums/SHA256SUM">SHA256</a> and
+    <a href="/checksums/SHA512SUM">SHA512</a> sums are also known.
   </section>
 
   <section id="contact">
