--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -245,9 +245,9 @@
       </tbody>
     </table>
 
-    The table files have internal non-cryptographic checksums that can be
-    verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
-    <a href="/checksums/bytes.tsv">Files sizes</a>,
+    The table files have internal non-cryptographic <a href="/checksums/syzygy.txt">checksums</a>
+    that can be verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
+    <a href="/checksums/bytes.tsv">Files sizes</a> (<code>du --bytes</code>),
     <a href="/checksums/MD5SUM">MD5</a>,
     <a href="/checksums/SHA1SUM">SHA1</a>,
     <a href="/checksums/SHA256SUM">SHA256</a> and
