provide list for ipfs

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -234,7 +234,7 @@
         <td><a href="https://ipfs.syzygy-tables.info/">ipfs.syzygy-tables.info</a></td>
         <td>ipfs, Cloudflare</td>
         <td>7</td>
-        <td></td>
+        <td><a href="/download.txt?source=ipfs&max-pieces=7"><span class="icon icon-download"></span></a></td>
       </tr>
       <tr>
         <td><a href="http://oics.olympuschess.com/">oics.olympuschess.com</a></td>
