--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -251,7 +251,8 @@
     <a href="/checksums/MD5SUM">MD5</a>,
     <a href="/checksums/SHA1SUM">SHA1</a>,
     <a href="/checksums/SHA256SUM">SHA256</a> and
-    <a href="/checksums/SHA512SUM">SHA512</a> sums are also known.
+    <a href="/checksums/SHA512SUM">SHA512</a> sums are also known, as well
+    as the <a href="/checksums/PackManifest">IPFS PackManifest</a>.
   </section>
 
   <section id="contact">
