szyygy.txt -> tbcheck.txt

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -245,7 +245,7 @@
       </tbody>
     </table>
 
-    The table files have internal non-cryptographic <a href="/checksums/syzygy.txt">checksums</a>
+    The table files have internal non-cryptographic <a href="/checksums/tbcheck.txt">checksums</a>
     that can be verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
     <a href="/checksums/bytes.tsv">Files sizes</a> (<code>du --bytes</code>),
     <a href="/checksums/MD5SUM">MD5</a>,
