--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -245,14 +245,15 @@
       </tbody>
     </table>
 
-    The table files have internal non-cryptographic <a href="/checksums/tbcheck.txt">checksums</a>
-    that can be verified using <a href="https://github.com/syzygy1/tb"><code>tbcheck</code></a>.
-    <a href="/checksums/bytes.tsv">Files sizes</a> (<code>du --bytes</code>),
-    <a href="/checksums/MD5SUM">MD5</a>,
-    <a href="/checksums/SHA1SUM">SHA1</a>,
-    <a href="/checksums/SHA256SUM">SHA256</a> and
-    <a href="/checksums/SHA512SUM">SHA512</a> sums are also known, as well
-    as the <a href="/checksums/PackManifest">IPFS PackManifest</a>.
+    <h3>Checksums</h3>
+    <a href="/checksums/bytes.tsv" title="du --bytes">file sizes</a> &middot;
+    <a href="/checksums/tbcheck.txt" title="Internal non-cryptographic checksums">tbcheck</a> &middot;
+    <a href="/checksums/MD5SUM">md5</a> &middot;
+    <a href="/checksums/SHA1SUM">sha1</a> &middot;
+    <a href="/checksums/SHA256SUM">sha256</a> &middot;
+    <a href="/checksums/SHA512SUM">sha512</a> &middot;
+    <a href="/checksums/B2SUM">blake2</a> &middot;
+    <a href="/checksums/PackManifest" title="PackManifest">ipfs</a>
   </section>
 
   <section id="contact">
