dot file export for dependency graphs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,7 +177,7 @@ td, th {
 section {
   padding-top: 40px;
 }
-#pgn-download, #lichess-analysis {
+.meta-link {
   white-space: nowrap;
   margin-right: 0.5em;
 }
