--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -58,7 +58,7 @@
 
     <p>A DTZ value <var>n</var> &gt 100 means the position is winning, but drawn under the 50-move rule.
       A zeroing move or checkmate can be forced in <var>n</var> half-moves, or in <var>n</var> - 100 half-moves
-      if a later phase is responsible for the win.</p>
+      if a later phase is responsible for the draw.</p>
 
     <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
 
