tweak KvK edge case

--- a/templates/xhr-probe.html
+++ b/templates/xhr-probe.html
@@ -124,23 +124,25 @@
     </section>
   {% endif %}
 
-  {% if deps %}
+  {% if is_table %}
     <section id="dependencies">
       <h3>{{ material }} dependencies</h3>
-      <p>
-        To probe all {{ normalized_material }} positions, these tables and their transitive
-        dependencies are also required:
-      </p>
-      <p>
-        {% for dep in deps %}
-          {% if dep["longest_fen"] %}
-            <a href="/?fen={{ dep["longest_fen"]|replace(" ", "_") }}">{{ dep["material"] }}</a>
-          {% else %}
-            {{ dep["material"] }}
-          {% endif %}
-          {% if not loop.last %} &middot; {% endif %}
-       {% endfor %}
-      </p>
+      {% if deps %}
+        <p>
+          To probe all {{ normalized_material }} positions, these tables and their transitive
+          dependencies are also required:
+        </p>
+        <p>
+          {% for dep in deps %}
+            {% if dep["longest_fen"] %}
+              <a href="/?fen={{ dep["longest_fen"]|replace(" ", "_") }}">{{ dep["material"] }}</a>
+            {% else %}
+              {{ dep["material"] }}
+            {% endif %}
+            {% if not loop.last %} &middot; {% endif %}
+         {% endfor %}
+        </p>
+      {% endif %}
       <p>
         <a class="meta-link" href="/download/{{ normalized_material }}.txt?source=lichess&dtz=root" title="Download list">
           <span class="icon icon-list" aria-hidden="true"></span>
