--- a/templates/legal.html
+++ b/templates/legal.html
@@ -68,9 +68,9 @@
 
     <p>It also uses the following software/artwork:</p>
     <ul>
-      <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="https://github.com/ornicar/chessground">chessground</a> (<a href="https://github.com/ornicar/chessground/blob/master/LICENSE">GPL-3.0+</a>)</li>
-      <li><a href="https://github.com/jhlywa/chess.js">chess.js</a> (<a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">MIT</a>)</li>
+      <li><a href="https://github.com/niklasf/chessops">chessops</a> (<a href="https://github.com/niklasf/chessops/blob/master/LICENSE.txt">GPL-3.0+</a>)</li>
+      <li><a href="https://github.com/niklasf/python-chess">python-chess</a> (<a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">GPL-3.0+</a>)</li>
       <li><a href="http://aiohttp.readthedocs.org/en/stable/">aiohttp</a> (<a href="https://github.com/KeepSafe/aiohttp/blob/master/LICENSE.txt">Apache 2</a>)</li>
       <li><a href="https://palletsprojects.com/p/jinja/">Jinja</a> (<a href="https://github.com/pallets/jinja/blob/master/LICENSE.rst">BSD</a>)</li>
       <li><a href="https://htmlmin.readthedocs.org/en/latest/">htmlmin</a> (<a href="https://github.com/mankyd/htmlmin/blob/master/LICENSE">BSD</a>)</li>
