--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -40,7 +40,7 @@
     <p>A DTZ value <var>n</var> with 100 &ge; <var>n</var> &ge; 1 means the position is winning, and a zeroing
       move or checkmate can be forced in <var>n</var> or <var>n</var> + 1 half-moves.</p>
 
-    <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=1kb5/8/1KN5/3N4/8/8/8/8&check=b8"></a>
+    <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1"><img width="300" height="300" alt="1kb5/8/1KN5/3N4/8/8/8/8" src="https://backscattering.de/web-boardimage/board.svg?fen=1kb5/8/1KN5/3N4/8/8/8/8&check=b8"></a>
 
     <p>For an example of this ambiguity, see how the DTZ repeats after the only-move Ka8 in
       <a href="/?fen=1kb5/8/1KN5/3N4/8/8/8/8_b_-_-_0_1">1kb5/8/1KN5/3N4/8/8/8/8 b - -</a>.
@@ -60,7 +60,7 @@
       A zeroing move or checkmate can be forced in <var>n</var> or <var>n</var> + 1 half-moves,
       or in <var>n</var> - 100 or <var>n</var> + 1 - 100 half-moves if a later phase is responsible for the draw.</p>
 
-    <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="" src="https://backscattering.de/web-boardimage/board.svg?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
+    <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1"><img width="300" height="300" alt="8/8/2N5/8/3k4/7N/p2K4/8" src="https://backscattering.de/web-boardimage/board.svg?fen=8/8/2N5/8/3k4/7N/p2K4/8&check=d4"></a>
 
     <p>
       For example, in <a href="/?fen=8/8/2N5/8/3k4/7N/p2K4/8_b_-_-_0_1">8/8/2N5/8/3k4/7N/p2K4/8 b - -</a>
